--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,7 +1,29 @@
 <h1><%= @question.content %> by <%= @question.user %></h1>
-<p><%= link_to "Return to Questions", questions_path %></p>
 
+<% if @question.answers.any? %>
+  <h4>Here are the answers for this question:</h4>
+
+  <ul>
+    <% @question.answers.each do |answer| %>
+      <li>
+        <%= answer.content %> |
+        <%= link_to "Edit Answer", edit_question_answer_path(@question, answer) %> |
+        <%= link_to "Delete Answer", question_answer_path(@question, answer),
+                                 :data => {:confirm => "Are you sure?",
+                                                :method => "delete"} %>
+      </li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>There are no answers yet!</p>
+<% end %>
+
+
+
+<p><%= link_to "Add Answer", new_question_answer_path(@question) %></p>
 <p><%= link_to "Edit Question", edit_question_path(@question) %></p>
 <p><%= link_to "Delete Question", question_path(@question),
                          :data => {:confirm => "You sure?",
                                    :method => "delete"} %></p>
+
+<p><%= link_to "Return to Questions", questions_path %></p>
