--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,13 @@
   <body>
     <div class="container">
       <div id="user_header">
-        <%= link_to "Sign Up", new_user_path %>
+        <% if current_user %>
+          logged in as <%= current_user.email %>
+          <%= link_to "Log Out", logout_path %>
+        <% else %>
+          <%= link_to "Sign Up", signup_path %> or
+          <%= link_to "Log In", login_path %>
+        <% end %>
       </div>
     </div>
     <%= yield %>
